--- a/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
@@ -2,26 +2,6 @@
     {{> breadcrumbs_posts}}
 
     {{#with primaryResponse.hits.hits.[0]._source}}
-        {{{amped_content}}}
+        {{{rendered.amp_full}}}
     {{/with}}
-
-    <div class="">
-        {{#if primaryResponse.hits.hits.[0]._source.is_press_release}}
-            <ul class="supplimentary-list">
-                {{#each supplimentaryResponses.category_posts.hits.hits}}
-                    {{{_source.rendered.sidebar}}}
-                {{/each}}
-            </ul>
-        {{else}}
-            {{#if primaryResponse.hits.hits.[0]._source.categories}}
-                <div class="author-about">
-                    {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
-                        {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
-                    {{else}}
-                        {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
-                    {{/if}}
-                </div>
-            {{/if}}
-        {{/if}}
-    </div>
 </div>
