Update view names

--- a/functions/test-db/json2/scvo/templates/grants/grant-charter-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grants/grant-charter-search.hbs
@@ -29,7 +29,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content grant-content">
                     {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
 
                     <hr />
