--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -228,7 +228,7 @@
                         Top third sector jobs
                     </h2>
                     {{#each supplimentaryResponses.goodmoves_latest.hits.hits}}
-                    {{{_source.rendered.gist}}}
+                    {{{_source.rendered.scvo_gist}}}
                     {{/each}}
                     <h2>
                         <a href="https://goodmoves.com">See more on <strong>good</strong>moves</a>
