--- a/functions/test-db/json2/scvo/templates/posts/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-author.hbs
@@ -29,7 +29,7 @@
                     {{/compare}}
                     <ul class="supplimentary-list">
                         {{#each primaryResponse.hits.hits}}
-                        {{{_source.rendered.list}}}
+                        {{{_source.rendered.scvo_list}}}
                         {{/each}}
                     </ul>
                     {{> pagination}}
