--- a/functions/test-db/json2/scvo/partials/related-posts.hbs
+++ b/functions/test-db/json2/scvo/partials/related-posts.hbs
@@ -5,7 +5,7 @@
         <div class="mdc-layout-grid__inner">
             {{#each supplimentaryResponses.related_posts.hits.hits}}
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                {{{_source.rendered.gist}}}
+                {{{_source.rendered.scvo_gist}}}
             </div>
             {{/each}}
         </div>
