--- a/functions/test-db/json2/scvo/templates/jobs/scvo-jobs.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/scvo-jobs.hbs
@@ -7,7 +7,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
 
                     {{#compare supplimentaryResponses.scvo_jobs.hits.total "===" 0}}
