--- a/functions/test-db/json2/scvo/templates/pages/page-blogs.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-blogs.hbs
@@ -26,7 +26,7 @@
                     {{> search_info}}
                     <ul class="supplimentary-list">
                         {{#each primaryResponse.hits.hits}}
-                        {{{_source.rendered.list}}}
+                        {{{_source.rendered.scvo_list}}}
                         {{/each}}
                     </ul>
                     {{> pagination}}
@@ -40,7 +40,7 @@
                     {{> wee_search title="Search posts" searchPath="/search" searchRoute="main_search" extraParams='{ "type": "scvo-cms-post" }'}}
 
                     {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
                 </div>
             </div>
