--- a/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
@@ -9,7 +9,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
                     {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
                 </div>
                 <!-- {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
