--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-employers.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-employers.hbs
@@ -7,7 +7,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
@@ -21,7 +21,7 @@
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.related_posts.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                                {{{_source.rendered.gist}}}
+                                {{{_source.rendered.scvo_gist}}}
                             </div>
                             {{/each}}
                         </div>
