--- a/functions/test-db/json2/scvo/templates/pages/page-funding-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-funding-landing.hbs
@@ -7,7 +7,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
                     {{#with primaryResponse.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
                 </div>
                 {{#compare supplimentaryResponses.recently_updated_funds.hits.total ">" 0}}
@@ -17,7 +17,7 @@
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.recently_updated_funds.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                                {{{_source.rendered.gist}}}
+                                {{{_source.rendered.scvo_gist}}}
                             </div>
                             {{/each}}
                             <a href="http://fundingscotland.com" class="mdc-button v-margin-full pull-right">See more</a>
