--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -31,7 +31,7 @@
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone top-jobs">
                                 <h2>Top jobs</h2>
                                 {{#each supplimentaryResponses.goodmoves_latest.hits.hits}}
-                                {{{_source.rendered.gist}}}
+                                {{{_source.rendered.scvo_gist}}}
                                 {{/each}}
                             </div>
                         </div>
