--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -6,7 +6,7 @@
         <div class="mdc-layout-grid support support-policy v-margin">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                    {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
+                    {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card v-margin">
