--- a/functions/test-db/json2/scvo/templates/pages/page-press.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-press.hbs
@@ -26,7 +26,7 @@
                     {{> search_info}}
                     <ul class="supplimentary-list">
                         {{#each primaryResponse.hits.hits}}
-                        {{{_source.rendered.list}}}
+                        {{{_source.rendered.scvo_list}}}
                         {{/each}}
                     </ul>
                     {{> pagination}}
@@ -38,7 +38,7 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
                 </div>
             </div>
