--- a/functions/test-db/json2/scvo/templates/pages/page.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page.hbs
@@ -7,7 +7,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{#with primaryResponse.hits.hits.[0]._source}}
-                        {{{rendered.full}}}
+                        {{{rendered.scvo_full}}}
                     {{/with}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-12-tablet sidebar page-sidebar">
@@ -16,7 +16,7 @@
                             <h3 class="blogs">Related posts</h3>
                             <ul class="v-margin supplimentary-list">
                                 {{#each supplimentaryResponses.related_posts.hits.hits}}
-                                    {{{_source.rendered.sidebar_mini}}}
+                                    {{{_source.rendered.scvo_sidebar_mini}}}
                                 {{/each}}
                             </ul>
                             <a class="v-margin mdc-button mdc-button--raised" href="/post/categories/{{primaryResponse.hits.hits.[0]._source.categories_slug.[0]}}">Read more</a>
