--- a/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
@@ -9,7 +9,7 @@
         {{#if primaryResponse.hits.hits.[0]._source.is_press_release}}
             <ul class="supplimentary-list">
                 {{#each supplimentaryResponses.category_posts.hits.hits}}
-                    {{{_source.rendered.sidebar}}}
+                    {{{_source.rendered.scvo_sidebar}}}
                 {{/each}}
             </ul>
         {{else}}
