--- a/functions/test-db/json2/scvo/templates/posts/post-category.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-category.hbs
@@ -30,7 +30,7 @@
                     {{> search_info}}
                     <ul class="supplimentary-list">
                         {{#each primaryResponse.hits.hits}}
-                        {{{_source.rendered.list}}}
+                        {{{_source.rendered.scvo_list}}}
                         {{/each}}
                     </ul>
                     {{> pagination}}
