--- a/functions/test-db/json2/scvo/templates/trustees/trustee-search.hbs
+++ b/functions/test-db/json2/scvo/templates/trustees/trustee-search.hbs
@@ -32,7 +32,7 @@
                     <hr />
 
                     {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
-                    {{{rendered.full}}}
+                    {{{rendered.scvo_full}}}
                     {{/with}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content trustee-content">
