--- a/functions/test-db/json2/scvo/templates/trustees/trustee.hbs
+++ b/functions/test-db/json2/scvo/templates/trustees/trustee.hbs
@@ -32,7 +32,7 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content trustee-content">
                     {{#with primaryResponse.hits.hits.[0]}}
-                    {{{_source.rendered.full}}}
+                    {{{_source.rendered.scvo_full}}}
                     {{/with}}
                 </div>
             </div>
