Finished updating view names

--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -32,9 +32,9 @@
                     <h3>Briefings</h3>
 
                     {{#if supplimentaryResponses.latest_briefings.hits.hits}}
-                    {{{supplimentaryResponses.latest_briefings.hits.hits.[0]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.latest_briefings.hits.hits.[1]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.latest_briefings.hits.hits.[2]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_briefings.hits.hits.[0]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.latest_briefings.hits.hits.[1]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.latest_briefings.hits.hits.[2]._source.rendered.scvo_gist}}}
                     {{/if}}
 
                     <a href="/policy-research/briefings" class="v-margin">More briefings</a>
@@ -43,9 +43,9 @@
                     <h3>Consultation responses</h3>
 
                     {{#if supplimentaryResponses.latest_consultation_responses.hits.hits}}
-                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[0]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[1]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[2]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[0]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[1]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[2]._source.rendered.scvo_gist}}}
                     {{/if}}
 
                     <a href="/policy-research/consultation-responses" class="v-margin">More consultation responses</a>
@@ -54,9 +54,9 @@
                     <h3>Research</h3>
 
                     {{#if supplimentaryResponses.latest_research.hits.hits}}
-                    {{{supplimentaryResponses.latest_research.hits.hits.[0]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.latest_research.hits.hits.[1]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.latest_research.hits.hits.[2]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_research.hits.hits.[0]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.latest_research.hits.hits.[1]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.latest_research.hits.hits.[2]._source.rendered.scvo_gist}}}
                     {{/if}}
 
                     <a href="/policy-research/research" class="v-margin">More research</a>
