--- a/functions/test-db/json2/scvo/templates/documents/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/documents/evidence-library-document-search.hbs
@@ -24,7 +24,7 @@
             <li><a href="/policy-research">Policy &amp; research</a></li>
             <li>Evidence Library</li>
         </ul>
-        <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid v-margin-full">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar library-sidebar">
                     {{> sidebar_library_search}}
