--- a/functions/test-db/json2/scvo/templates/posts/post-category.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-category.hbs
@@ -23,7 +23,7 @@
     </div>
     <div class="container-fluid">
         {{> breadcrumbs_posts}}
-        <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid v-margin">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content post-content">
                     {{#compare primaryResponse.hits.total ">" 0}}
