--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -205,9 +205,9 @@
                     <h2>
                         Recent SCVO blog posts
                     </h2>
-                    {{{supplimentaryResponses.blogs_latest.hits.hits.[1]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.blogs_latest.hits.hits.[2]._source.rendered.gist}}}
-                    {{{supplimentaryResponses.blogs_latest.hits.hits.[3]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.blogs_latest.hits.hits.[1]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.blogs_latest.hits.hits.[2]._source.rendered.scvo_gist}}}
+                    {{{supplimentaryResponses.blogs_latest.hits.hits.[3]._source.rendered.scvo_gist}}}
                     <h2>
                         <a href="/blogs">Read more SCVO blogs</a>
                     </h2>
