--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -103,7 +103,7 @@
     {{#with supplimentaryResponses.blogs_latest.hits.hits.[0]}}
     <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}>
         <div class="container-fluid">
-            {{{_source.rendered.featured}}}
+            {{{_source.rendered.scvo_featured}}}
         </div>
     </div>
     {{/with}}
@@ -137,7 +137,7 @@
     {{#with supplimentaryResponses.press_latest.hits.hits.[0]}}
     <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}>
         <div class="container-fluid">
-            {{{_source.rendered.featured}}}
+            {{{_source.rendered.scvo_featured}}}
         </div>
     </div>
     {{/with}}
