--- a/functions/test-db/json2/scvo/templates/staff/staff.hbs
+++ b/functions/test-db/json2/scvo/templates/staff/staff.hbs
@@ -42,7 +42,7 @@
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.author_posts.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                                {{{_source.rendered.list}}}
+                                {{{_source.rendered.scvo_list}}}
                             </div>
                             {{/each}}
                         </div>
