--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1074,7 +1074,9 @@ section.search {
     .latest-content {
         h2 a,
         .scvo-cms-post,
-        .tfn-news-post {
+        .tfn-feature,
+        .tfn-news-post,
+        .tfn-blog-post {
             padding-right: $unit;
             border-right: 1px solid rgba(0,0,0,.2);
         }
