--- a/functions/test-db/json2/scvo/templates/pages/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-digital.hbs
@@ -179,7 +179,7 @@
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.related_posts.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                                {{{_source.rendered.gist}}}
+                                {{{_source.rendered.scvo_gist}}}
                             </div>
                             {{/each}}
                         </div>
