Charity awards colours

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1792,6 +1792,41 @@ body.the-gathering {
         width: 60%;
     }
 }
+body.scottish-charity-awards {
+    .mdc-card {
+        .mdc-card__primary .mdc-card__title {
+            color: white;
+            padding: 0;
+        }
+        .mdc-card__supporting-text {
+            margin-top: $unit;
+        }
+    }
+    .mdc-card.celebrating-communities .mdc-card__primary {
+        background-color: #729957;
+    }
+    .mdc-card.charity-champion .mdc-card__primary {
+        background-color: #a9889f;
+    }
+    .mdc-card.charity-of-the-year .mdc-card__primary {
+        background-color: #008eca;
+    }
+    .mdc-card.cracking-campaign .mdc-card__primary {
+        background-color: #f18816;
+    }
+    .mdc-card.demonstrating-digital .mdc-card__primary {
+        background-color: #e30613;
+    }
+    .mdc-card.leading-light .mdc-card__primary {
+        background-color: #d7bb00;
+    }
+    .mdc-card.pioneering-project .mdc-card__primary {
+        background-color: #578da3;
+    }
+    .mdc-card.terrific-trustee .mdc-card__primary {
+        background-color: #b0be48;
+    }
+}
 // .mdc-temporary-drawer,
 .about.staff-team .post-info-author,
 .about.work-with-us .page-info,
