--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -906,6 +906,26 @@ section.search {
     top: 0.35rem;
     right: 0.4rem;
 }
+.jobs-landing {
+    .mdc-card.goodmoves-brand,
+    .mdc-card.cjs-brand {
+        .mdc-card__media {
+            padding: $unit;
+            a {
+                height: 100%;
+                width: 100%;
+                display: block;
+                position: relative;
+            }
+            a:hover {
+                text-decoration: none;
+            }
+        }
+        h3 {
+            margin: 0 0 $unit;
+        }
+    }
+}
 
 .home {
     .search {
@@ -2120,7 +2140,7 @@ table.membership-fees {
     .mdc-card__media {
         height: $unit*4;
         padding: $unit/2 $unit;
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         background-origin: content-box;
         margin-bottom: $unit;
@@ -2128,11 +2148,12 @@ table.membership-fees {
             display: none;
         }
     }
-    .cjs .mdc-card__media {
+    .goodmoves-brand .mdc-card__media,
+    .cjs-brand .mdc-card__media {
         height: 128px;
-        background-size: cover;
+        background-size: unset;
         background-repeat: no-repeat;
-        background-position: center center;
+        background-position: left center;
         padding: 0;
         margin-bottom: 1rem;
         background-color: #ccc !important;
@@ -2172,17 +2193,23 @@ table.membership-fees {
     .mdc-card__supporting-text {
         padding-top: 0;
     }
-    .goodmoves .mdc-card__media {
+    .goodmoves .mdc-card__media,
+    .goodmoves-brand .mdc-card__media {
         background-color: #58a934 !important;
+        background-size: contain;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodmoves.png');
     }
+    .goodmoves-brand .mdc-card__media {
+        background-size: unset;
+    }
     .cjs-brand .mdc-card__media {
-        height: 105px;
-        background-color: #fff !important;
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs.png');
+        background-color: #fafafa !important;
+        background-size: contain;
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-logo.png');
     }
     .funding-scotland .mdc-card__media {
         background-color: #8AC645 !important;
+        background-size: contain;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/funding-scotland.png');
     }
     .goodhq .mdc-card__media {
