--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -3,10 +3,10 @@
     <div class="container-fluid">
         {{#> handle_404}}
         {{> breadcrumbs}}
-        <div class="mdc-layout-grid equal-height support">
+        <div class="mdc-layout-grid equal-height support v-margin-full">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content search">
-                    <div class="mdc-card goodmoves-brand">
+                    <div class="mdc-card goodmoves-brand v-margin">
                         <section class="mdc-card__media"><a href="https://goodmoves.com">&nbsp;</a></section>
                         <section class="mdc-card__supporting-text">
                             <h3>Find a job in the third sector</h3>
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                    <div class="mdc-card cjs-brand">
+                    <div class="mdc-card cjs-brand v-margin">
                         <section class="mdc-card__media"><a href="/jobs/community-jobs-scotland">&nbsp;</a></section>
                         <section class="mdc-card__supporting-text">
                             <h3>Creating jobs in Scotland's third sector for unemployed young people</h3>
