--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2186,6 +2186,10 @@ table.membership-fees {
         }
     }
     .cjs {
+        .mdc-card__media {
+            padding: 0;
+            height: 8rem;
+        }
         .mdc-card__primary {
             margin-bottom: 0;
         }
@@ -2214,18 +2218,22 @@ table.membership-fees {
     }
     .goodhq .mdc-card__media {
         background-color: #4033E9 !important;
+        background-size: contain;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodhq.png');
     }
     .tfn .mdc-card__media {
         background-color: #3b9db1 !important;
+        background-size: contain;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/tfn.png');
     }
     .credit-union .mdc-card__media {
         background-color: #1976D2 !important;
+        background-size: contain;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/credit-union.png');
     }
     .milo .mdc-card__media {
         background-color: #4475A0 !important;
+        background-size: contain;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/milo.png');
     }
 }
