--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -21,9 +21,9 @@
                             <p>
                                 Try: <a href="/jobs/search?region=East+of+Scotland">East of Scotland</a>, <a href="/jobs/search?role=Management">Management</a>, <a href="/jobs/search?sector=Social+Care">Social Care</a>
                             </p>
-                            <p>
-                                <a href="https://goodmoves.com/recruiting">Advertise with us <span class="far fa-external-link"></span></a>
-                            </p>
+                        </section>
+                        <section class="mdc-card__actions">
+                            <a href="https://goodmoves.com/recruiting" class="mdc-action">Advertise with us <span class="far fa-external-link"></span></a>
                         </section>
                     </div>
                 </div>
@@ -33,13 +33,11 @@
                         <section class="mdc-card__supporting-text">
                             <h3>Creating jobs in Scotland's third sector for unemployed young people</h3>
                             <p>
-                                Community Jobs Scotland works with hundreds of third sector organisations to support over 8,000 unemployed young people into work.
+                                Community Jobs Scotland works with hundreds of third sector organisations and has supported over 8,000 unemployed young people into work.
                             </p>
-                            <ul>
-                                <li>Third sector employer? <a href="/jobs/community-jobs-scotland/information-for-employers">Find out how to get involved</a></li>
-                                <li>Aged 16-19? <a href="/jobs/community-jobs-scotland/information-for-employees">Find out hot to get employed through CJS</a></li>
-                                <li>SDS or JCP employee? <a href="http://jobs.scvo.org.uk">Access vacancy information</a></li>
-                            </ul>
+                        </section>
+                        <section class="mdc-card__actions">
+                            <a href="/jobs/community-jobs-scotland" class="mdc-action">Find out more</a>
                         </section>
                     </div>
                 </div>
