--- a/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-jobs-landing.hbs
@@ -56,6 +56,9 @@
                             {{/each}}
                         </div>
                     </div>
+                    <p>
+                        <a href="/jobs/search" class="mdc-button mdc-button--raised">Find more jobs</a>
+                    </p>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     <h2>Current CJS vacancies</h2>
@@ -68,6 +71,9 @@
                             {{/each}}
                         </div>
                     </div>
+                    <p>
+                        <a href="/jobs/community-jobs-scotland" class="mdc-button mdc-button--raised">Browse all vacancies</a>
+                    </p>
                 </div>
                 {{#compare supplimentaryResponses.related_training.hits.total ">" 0}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone related page-related">
@@ -81,6 +87,9 @@
                             {{/each}}
                         </div>
                     </div>
+                    <p>
+                        <a href="/events?course_type=Training+Course" class="mdc-button mdc-button--raised">See all courses</a>
+                    </p>
                 </div>
                 {{/compare}}
             </div>
