--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -907,6 +907,9 @@ section.search {
     right: 0.4rem;
 }
 .jobs-landing {
+    .page-content {
+        padding: 0;
+    }
     .mdc-card.goodmoves-brand,
     .mdc-card.cjs-brand {
         .mdc-card__media {
