Updated font for AMP pages

--- a/functions/test-db/json2/scvo/layouts/amp.hbs
+++ b/functions/test-db/json2/scvo/layouts/amp.hbs
@@ -25,6 +25,7 @@
             font-size: 16px;
             color: #292929;
             background-color: #e3e3e3;
+            font-family: sans-serif;
         }
 
         header {
