Fixed AMP heading in template to use 3 brackets

--- a/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
@@ -2,7 +2,7 @@
     {{> breadcrumbs_posts}}
 
     {{#with primaryResponse.hits.hits.[0]._source}}
-        <h1>{{title}}</h1>
+        <h1>{{{title}}}</h1>
         {{{rendered.amp_full}}}
     {{/with}}
 </div>
