--- a/functions/test-db/json2/scvo/layouts/default.hbs
+++ b/functions/test-db/json2/scvo/layouts/default.hbs
@@ -30,7 +30,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-3467930-2');
+      gtag('config', 'UA-3467930-2', { 'send_page_view': false });
     </script>
     <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
