--- a/functions/test-db/json2/digitalparticipation/layouts/default.hbs
+++ b/functions/test-db/json2/digitalparticipation/layouts/default.hbs
@@ -25,6 +25,15 @@
     <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/css/digitalparticipation-styles.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-27"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-3467930-19');
+    </script>
 </head>
 <body class="{{replace route.params.path '_' ' '}}">
     <scvo-site>
