--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
@@ -9,12 +9,15 @@
             <div class="cta-content callout-image benefit swiper-slide">
                 <div class="container-fluid">
                     <div class="caption">
-                        <p>
-                            Over 8,000 young people employed
-                        </p>
-                        <p>
-                            Over 600 partner organisations
-                        </p>
+                        <img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-logo.png" alt="Community Jobs Scotland" />
+                        <div class="caption-inner">
+                            <p>
+                                Over 8,000 young people employed
+                            </p>
+                            <p>
+                                Over 600 partner organisations
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
