--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -463,7 +463,7 @@ primary-dark: #251032
             color: map-get($themeDefault, 'primary') !important;
         }
     }
-    .community-jobs-scotland .callout-image .caption {
+    .community-jobs-scotland .callout-image .caption .caption-inner {
         background-color: map-get($themeJobs, 'primary-overlay-start');
     }
     .swiper-container .swiper-pagination-bullet {
@@ -511,7 +511,7 @@ primary-dark: #251032
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/cjs-jobs.png');
     }
     .community-jobs-scotland .callout-image.benefit {
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/benefit.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/newcjsbanner.jpg');
     }
     .policy-research .callout-image {
         background-image: linear-gradient(
@@ -835,11 +835,19 @@ figure {
                 text-align: right;
                 color: #fff;
                 font-weight: 600;
-                font-size: 2.1rem;
-                padding: 1.5rem 3rem;
+                font-size: 1.7rem;
                 align-self: flex-end;
                 margin: 0;
                 max-width: 65%;
+                img {
+                    width: 200px;
+                    height: auto;
+                    padding-top: $unit;
+                    padding-bottom: $unit/2;
+                }
+                .caption-inner {
+                    padding: 1.5rem 3rem;
+                }
             }
         }
     }
@@ -2074,10 +2082,10 @@ table.membership-fees {
         margin-bottom: $unit;
     }
     .cjs-employers .mdc-card__media {
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cafe.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-employers.jpg');
     }
     .cjs-employees .mdc-card__media {
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/woodwork.jpg');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-employees.jpg');
     }
     .cjs-vacancies .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/hiring.jpg');
@@ -2210,7 +2218,7 @@ table.membership-fees {
         background-size: unset;
     }
     .cjs-brand .mdc-card__media {
-        background-color: #fafafa !important;
+        background-color: #f1f1f1 !important;
         background-size: contain;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs-logo.png');
     }
