Fixed mistake in EL dates

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1087,6 +1087,12 @@ section.search {
         padding: $unit*1.5 0;
         h2 {
             margin-top: 0;
+            .mdc-typography--caption {
+                font-weight: 600;
+                font-size: 1rem;
+                margin-left: 0.25rem;
+                letter-spacing: -0.02rem;
+            }
         }
         p {
             margin: $unit 0 0;
