--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -67,7 +67,10 @@
 
     <div class="cta-content callout-image policy-stats v-margin-full">
         <div class="container-fluid">
-            <h2>The Scottish third sector</h2>
+            <h2>
+                The Scottish third sector
+                <a href="/policy-research/evidence-library/2014-state-of-the-sector-statistics-2014" class="mdc-typography--caption">Read more</a>
+            </h2>
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner v-margin">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
