--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -25,10 +25,10 @@
             <li><a href="/jobs/community-jobs-scotland/vacancies">Vacancies</a></li>
             <li>Search</li>
         </ul>
-        <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid full">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-                    <p class="v-margin-full">
+                    <p>
                         Please view the opportunities available but if you cannot see a CJS job that would suit your customer then please contact the CJS team at <a href="mailto:communityjobsscotland@scvo.org.uk">communityjobsscotland@scvo.org.uk</a> with details and we can try and arrange an another opportunity.
                     </p>
                 </div>
