--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job-phase.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job-phase.hbs
@@ -24,7 +24,7 @@
             <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
             <li>Vacancies</li>
         </ul>
-        <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid full">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     <p>
