--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -792,7 +792,7 @@ figure {
     width: 100%;
     line-height: $nav-height - 3px;
     height: $nav-height - 3px;
-    border-radius: 0 !important;
+    border-radius: 2px !important;
     box-sizing: border-box;
 }
 .mdc-textfield__input,
@@ -889,7 +889,7 @@ section.search {
             -webkit-box-sizing: border-box;
             box-sizing: border-box;
             border: 2px solid #333;
-            border-radius: 0;
+            border-radius: 3px;
             width: 100%;
             height: $unit*3;
             line-height: $unit*3;
@@ -1252,6 +1252,7 @@ section.search {
     box-sizing: border-box;
     width: 100%;
     max-width: 100%;
+    background-position-x: 97%;
 }
 .mdc-select:focus {
     border-bottom-color: inherit;
@@ -1366,7 +1367,7 @@ section.search {
                     line-height: $nav-height - 3px;
                     height: $nav-height - 3px;
                     background: transparent;
-                    border-radius: 0 !important;
+                    border-radius: 2px !important;
                     box-sizing: border-box;
                 }
                 ::-webkit-input-placeholder {
