--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -69,7 +69,7 @@
         <div class="container-fluid">
             <h2>
                 The Scottish third sector
-                <a href="/policy-research/evidence-library/2014-state-of-the-sector-statistics-2014" class="mdc-typography--caption">Read more</a>
+                <span class="mdc-typography--caption">(Detailed statistics will be published soon)</span>
             </h2>
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner v-margin">
