--- a/functions/test-db/json2/scvo/partials/sidebar-library-search.hbs
+++ b/functions/test-db/json2/scvo/partials/sidebar-library-search.hbs
@@ -1,6 +1,6 @@
 <form action="/policy-research/evidence-library" method="GET" [searchroute]="'evidence_library_document_search'" data-auto-search="true" autocomplete="off">
     <div class="mdc-textfield mdc-textfield--upgraded">
-        <input type="text" class="mdc-textfield__input" name="q" id="evidence-library-keywords" value="{{params.query.q}}" placeholder="Search query">
+        <input type="text" class="mdc-textfield__input" name="q" id="evidence-library-keywords" value="{{params.query.q}}" placeholder="Keywords">
         <div class="mdc-textfield__bottom-line"></div>
     </div>
     <div class="mdc-form-field">
