--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2373,11 +2373,22 @@ body.post.author {
     }
 }
 
-.scvo-document.full {
+.full.scvo-document {
+    margin: 0 0 $unit;
+    .post-info {
+        border: none;
+        padding: 0;
+        margin: 0 0 $unit;
+    }
     ul {
         margin: 0;
         list-style-type: none;
         padding: 0;
+    }
+}
+.list.scvo-document {
+    .post-info-item {
+        margin-bottom: 0;
     }
 }
 
